--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ header{
 
 .brand {
   width: 150px;
+  padding-block: 15px;
 }
 
 /*-----------------*\
@@ -205,7 +206,7 @@ header{
 .bottom-mobile-menu {
   background-color: var(--primary-color);
   position: fixed;
-  top: 99px;
+  top: 80px;
   left: -999px;
   width: 100%;
   min-height: 100%;
@@ -387,7 +388,7 @@ order: -1;
 
 .navbar-list-item {
 flex: 1;  
-padding: 5px;
+padding: 1px;
 text-align: center;
 }
 
