--- a/styles.css
+++ b/styles.css
@@ -76,25 +76,6 @@ body {
   font-size: 1.6rem;
 }
 
-/*---------------------*\
-¦-----STICKY-HEADER-----¦
-\*---------------------*/
-header{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-.bottom-mobile-menu{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 9999;
-  transition: all 300ms ease-in-out;
-}
-
-
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -110,7 +91,31 @@ header{
 ::-webkit-scrollbar-thumb:hover {
   background-color: hsl(0, 0%, 70%);
 }
+/*---------------------*\
+¦-----STICKY-HEADER-----¦
+\*---------------------*/
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  transition: all 300ms ease-in-out;
+}
 
+/*------------------------*\
+¦---SCROLLING-HEADER-JS----¦
+\*------------------------*/
+.scroll-down header{
+  transform: translate3d(0, -100%, 0);
+}
+.scroll-up header{
+}
+
+
+/*----------------*\
+¦----HEADER-BTN----¦
+\*----------------*/
 .header-btn {
   display: none;
 }
