--- a/styles.css
+++ b/styles.css
@@ -99,28 +99,46 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 5;
   transition: all 300ms ease-in-out;
 }
+
 .bottom-header{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 0;
-  transition: all 300ms ease-in-out;
+  all: unset; 
 }
 
 /*------------------------*\
 ¦---SCROLLING-HEADER-JS----¦
 \*------------------------*/
+
 .scroll-down .top-header{
   transform: translate3d(0, -100%, 0);
 }
-.scroll-up header{
+.scroll-up .top-header{
+  transform: translate3d(0, 0, 0);
+  box-shadow: 0 10px 30px hsla(0, 0%, 0%, 0.2);
 }
 
+.no-scroll {
+  overflow: hidden;
+}
 
+/*----------------*\
+¦------OVERLAY-----¦
+\*----------------*/
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgb(0, 0, 0, 0.5);
+  z-index: 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.35s ease;
+}
+.overlay.active {
+  opacity: 1;
+}
 /*----------------*\
 ¦----HEADER-BTN----¦
 \*----------------*/
@@ -203,7 +221,6 @@ body {
   left: 0;
   width: 100%;
   z-index: 4;
-  box-shadow: 0 2px 30px hsla(0, 0%, 0%, 0.1);
 }
 
 .top-header .container {
@@ -224,7 +241,7 @@ body {
   width: 100%;
   min-height: 100%;
   visibility: hidden;
-  z-index: 2;
+  z-index: 6;
   transition: 0.25s;
 }
 
@@ -241,6 +258,10 @@ body {
 .navbar-list-item:not(:last-child),
 .navbar-list-item:nth-of-type(7) {
   border-bottom: 0.1px solid var(--fourth-color);
+}
+
+.nav-list{
+  padding-block: 10px;
 }
 
 
@@ -308,14 +329,48 @@ section{
 
 @media (min-width: 1000px) {
 
+
+/*---------------------*\
+¦-----STICKY-HEADER-----¦
+\*---------------------*/
+
+.bottom-header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 0;
+  transition: all 300ms ease-in-out;
+  /* box-shadow: 0 1px 20px hsla(0, 0%, 0%, 0.23); */
+
+}
+
+
+/*------------------------*\
+¦---SCROLLING-HEADER-JS----¦
+\*------------------------*/
+
   .scroll-down .top-header{
     transform: translate3d(0, 0, 0);
+    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.3);
+
+  }
+  .scroll-up .top-header{
+    transform: translate3d(0, 0, 0);
+    box-shadow: none;
+
   }
 
   .scroll-down .bottom-header{
     transform: translate3d(0, -100%, 0);
   }
 
+  .scroll-up .top-header{
+    transform: translate3d(0, 0, 0);
+  }
+  .scroll-up .bottom-header{
+    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.3);
+  }
 /*--------------------*\
 ¦---CONTAINER-SIZING---¦
 \*--------------------*/
@@ -375,7 +430,6 @@ order: -1;
   .bottom-mobile-menu {
     all: unset; /* resets all property */
     /* margin-inline-start: auto; */
-    /* background-color: var(--third-color); */
   }
 
 /*-----------------------------*\
@@ -386,13 +440,16 @@ order: -1;
     border-bottom: none;
   }
 
+  .nav-list{
+    padding-block: 0px;
+  }
+
 /*-------------------------*\
 ¦---DESKTOP-BOTTOM-HEADER---¦
 \*-------------------------*/
   .bottom-header {
     top: 80px;
     background-color: var(--third-color);
-    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.3);
   }
 
 /*--------------------*\
