--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   --third-color: #cf323e;  
   --fourth-color: #3a3a3a;
  
+  --mid-third-color: rgb(186, 44, 55); 
   --dark-third-color: rgb(160, 24, 41, 0.6); 
 }
 
@@ -15,9 +16,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-body {
-  font-family: "Bebas Neue", sans-serif;
 }
 
 li {
@@ -65,9 +63,9 @@ address {
 }
 
 html {
-  font-family: var(--ff-poppins);
   font-size: 10px;
   scroll-behavior: smooth;
+  font-family: "Bebas Neue", sans-serif;
 }
 
 body {
@@ -77,23 +75,25 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: hsl(0, 0%, 95%);
+  background-color: var(--primary-color);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: hsl(0, 0%, 80%);
+  background-color: var(--secondary-color);
+  
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: hsl(0, 0%, 70%);
+  background-color: var(--mid-third-color);
 }
-/*---------------------*\
-¦-----STICKY-HEADER-----¦
-\*---------------------*/
+/*----------------------------*\
+¦-----STICKY-MOBILE-HEADER-----¦
+\*----------------------------*/
+
 .top-header{
   position: fixed;
   top: 0;
@@ -107,16 +107,16 @@ body {
   all: unset; 
 }
 
-/*------------------------*\
-¦---SCROLLING-HEADER-JS----¦
-\*------------------------*/
+/*-------------------------------*\
+¦---SCROLLING-MOBILE-HEADER-JS----¦
+\*-------------------------------*/
 
 .scroll-down .top-header{
   transform: translate3d(0, -100%, 0);
 }
 .scroll-up .top-header{
   transform: translate3d(0, 0, 0);
-  box-shadow: 0 10px 30px hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 10px 30px hsla(0, 0%, 0%, 0.3);
 }
 
 .no-scroll {
@@ -139,6 +139,7 @@ body {
 .overlay.active {
   opacity: 1;
 }
+
 /*----------------*\
 ¦----HEADER-BTN----¦
 \*----------------*/
@@ -221,6 +222,7 @@ body {
   left: 0;
   width: 100%;
   z-index: 4;
+  padding-block: 5px;
 }
 
 .top-header .container {
@@ -236,7 +238,7 @@ body {
 .bottom-mobile-menu {
   background-color: var(--primary-color);
   position: fixed;
-  top: 80px;
+  top: 90px;
   left: -999px;
   width: 100%;
   min-height: 100%;
@@ -260,19 +262,14 @@ body {
   border-bottom: 0.1px solid var(--fourth-color);
 }
 
-.nav-list{
-  padding-block: 10px;
-}
-
-
 /*--------------------*\
 ¦---NAVBAR-LIST-ITEM---¦
 \*--------------------*/
 .navbar-list-item a {
   color: var(--secondary-color);
-  font-size: 20px;
+  font-size: 21px;
   font-weight: 500;
-  padding-block: 25px;
+  padding-block: 26px;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-inline: 15px;
@@ -281,6 +278,7 @@ body {
 .navbar-list-item i {
   width: 30px;
 }
+
 /*------------------------------*\
 ¦---NAVBAR-LINK-HOVER-&-ACTIVE---¦
 \*------------------------------*/
@@ -290,7 +288,6 @@ body {
 .navbar-list-item.active {
   background-color: var(--third-color);
 }
-
 
 /*------------------------*\
 ¦---SECTION-CLASS-STYLES---¦
@@ -317,16 +314,39 @@ section{
   height: auto;
 }
 
+/* Remove phone icon */
 @media(min-width: 431px){
+  
 .phone-icon{
   display: none;
 }
 
+
+
 .book-icon {display: block;}
 }
 
+/* Mobile Screens Landscape */
+@media screen and (min-width: 667px) and (max-width: 932px) and (orientation: landscape) {
+  .phone-icon{
+    display: block;
+  }
+
+  .book-icon {display: none;}
+
+  .bottom-mobile-menu.active {
+    overflow-y: auto;
+    height: 100%;
+    padding-bottom: 100px;
+    max-height: 100%;
+  }
+  
+  
+  
+}
 
 
+/* Laptop / Desktop Screen Size */
 @media (min-width: 1000px) {
 
 
@@ -341,8 +361,8 @@ section{
   width: 100%;
   z-index: 0;
   transition: all 300ms ease-in-out;
-  /* box-shadow: 0 1px 20px hsla(0, 0%, 0%, 0.23); */
-
+  top: 90px;
+  background-color: var(--third-color);
 }
 
 
@@ -352,9 +372,9 @@ section{
 
   .scroll-down .top-header{
     transform: translate3d(0, 0, 0);
-    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.3);
-
+    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.5);
   }
+  
   .scroll-up .top-header{
     transform: translate3d(0, 0, 0);
     box-shadow: none;
@@ -364,19 +384,19 @@ section{
   .scroll-down .bottom-header{
     transform: translate3d(0, -100%, 0);
   }
-
-  .scroll-up .top-header{
-    transform: translate3d(0, 0, 0);
-  }
+  
   .scroll-up .bottom-header{
-    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.3);
+    box-shadow: 0 10px 30px -10px hsla(0, 0%, 0%, 0.5);
   }
+
 /*--------------------*\
 ¦---CONTAINER-SIZING---¦
 \*--------------------*/
+
 .top-header.container {
   margin: 0 auto;
 }
+
 body > header > div > div > button:nth-child(5){
 /* this pushes button to align left */
 
@@ -385,80 +405,69 @@ body > header > div > div > button:nth-child(5){
 order: -1;
 }
  
-  .bottom-header > .container {
-    width: auto;
-    margin: 0 auto;
-  }
+.bottom-header > .container {
+  width: auto;
+  margin: 0 auto;
+}
 
 /*-----------------*\
 ¦---HEADER-BUTTON---¦
 \*-----------------*/
-  .header-btn {
-    display: block;
-  }
+.header-btn {
+  display: block;
+}
 
-  .header-btn{
-  color: var(--secondary-color);
-  background-color: var(--third-color);
-  padding: 5px;
-  border-radius: 5px;
-  font-size: 18px;
-  flex-basis: 150px;
-  letter-spacing: 1px;
-  }
+.header-btn{
+color: var(--secondary-color);
+background-color: var(--third-color);
+padding: 5px;
+border-radius: 5px;
+font-size: 18px;
+flex-basis: 150px;
+letter-spacing: 1px;
+}
 
-  .btn-2{
-    /* margin-right: 20px; */
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-  }
+.btn-2{
+  /* margin-right: 20px; */
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
 
- 
+
 
 /*----------------*\
 ¦---MOBILE-ICONS---¦
 \*----------------*/
-  .phone-icon,
-  .book-icon,
-  .hamburger {
-    display: none;
-  }
+.phone-icon,
+.book-icon,
+.hamburger {
+  display: none;
+}
 
 /*---------------------*\
 ¦---MOBILE-MENU-RESET---¦
 \*---------------------*/
-  .bottom-mobile-menu {
-    all: unset; /* resets all property */
-    /* margin-inline-start: auto; */
-  }
+.bottom-mobile-menu {
+  all: unset; /* resets all property */
+  /* margin-inline-start: auto; */
+}
 
 /*-----------------------------*\
 ¦---MOBILE-MENU-BOTTOM-BORDER---¦
 \*-----------------------------*/
-  .navbar-list-item:not(:last-child),
-  .navbar-list-item:nth-of-type(7) {
-    border-bottom: none;
-  }
-
-  .nav-list{
-    padding-block: 0px;
-  }
-
-/*-------------------------*\
-¦---DESKTOP-BOTTOM-HEADER---¦
-\*-------------------------*/
-  .bottom-header {
-    top: 80px;
-    background-color: var(--third-color);
-  }
+.navbar-list-item:not(:last-child),
+.navbar-list-item:nth-of-type(7) {
+  border-bottom: none;
+}
 
 /*--------------------*\
 ¦---NAVBAR-LIST-FLEX---¦
 \*--------------------*/
 .nav-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+display: flex;
+justify-content: center;
+align-items: center;
+padding-block: 0px;
 }
 
 /*--------------------*\
@@ -499,9 +508,9 @@ text-align: center;
 .navbar-list-item i {
     width: auto;
   }
-
-
 }
+
+/* Large Laptop / Desktop Screen Size */
 @media (min-width: 1440px) {
 
 /*--------------------*\
@@ -521,13 +530,14 @@ text-align: center;
 ¦---NAVBAR-LIST-ITEM---¦
 \*--------------------*/  
 
-  .navbar-list-item i {
-    width: auto;
-  }
+.navbar-list-item i {
+  width: auto;
+}
 
 
 }
 
+/*  Deskstop Screen Size */
 @media (min-width: 1800px) {
 
 /*--------------------*\
