--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -377,6 +377,7 @@ font-weight: 100;
   width: 280px;
   margin-top: 30px;
   position: relative;
+  z-index: 4;
  
 }
 
@@ -458,10 +459,9 @@ margin-left: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 9px;
   margin-bottom: 15px;
   padding-inline: 10px;
-  padding-right: 7px;
 }
 
 /*------------------*\
@@ -761,7 +761,7 @@ text-align: center;
 ¦---NAVBAR-LINK-HOVER-&-ACTIVE---¦
 \*------------------------------*/
 .navbar-list-item:hover {
-  background-color: var(--dark-third-color);
+  background-color: var(--mid-third-color);
 }
 .navbar-list-item.active {
   background-color: var(--secondary-color);
@@ -815,7 +815,8 @@ text-align: center;
     order: 3;
     padding-block: none;
     padding-top: 4px;
-
+    position: relative;
+overflow: hidden;
   }
   .footer-section:nth-of-type(2) {
     flex-basis: 25%;
@@ -836,6 +837,34 @@ text-align: center;
   .h2-footer-title-lg{
     text-align: right;
   }
+
+
+  .footer-section:nth-of-type(1) {
+    flex-basis: 50%;
+    text-align: center;
+    order: 3;
+    padding-block: none;
+    padding-top: 4px;
+    position: relative;
+    overflow: hidden; /* Ensure overflow is hidden */
+  }
+  
+  .king-overlay {
+    display: block;
+    position: absolute;
+    top: 0%;
+    left: 29%;
+    transform: translate(0%, 0%);
+    background-image: url("../images/footer-bng-crown-two.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: left;
+    width: 100%; 
+    height: 100%; 
+    opacity: 0.7;
+    z-index: 1;
+  }
+  
 /*--------------------*\
 ¦---CONTAINER-SIZING---¦
 \*--------------------*/
